# plutobook

./: .gitignore  .packit.yaml  CHANGELOG.md  CREDITS  FEATURES.md  LICENSE  README.md  meson.build  meson_options.txt
.github/: FUNDING.yml
.github/workflows/: main.yml
docker/: manylinux_2_28_x86_64.Dockerfile
examples/: hello.cpp  html2pdf.cpp  html2png.cpp  invoice.cpp  invoice.css  invoice.html  meson.build
include/: plutobook.h  plutobook.hpp
licenses/: hyphen-en-us
licenses/qrcodegen/: LICENSE
packaging/fedora/: plutobook.spec
source/: counters.cpp  counters.h  cssparser.cpp  cssparser.h  cssproperty.cpp  cssproperty.h  cssrule.cpp  cssrule.h  cssstylesheet.cpp  cssstylesheet.h  csstokenizer.cpp  csstokenizer.h  document.cpp  document.h  globalstring.cpp  globalstring.h  heapstring.h  htmldocument.cpp  htmldocument.h  htmlentityparser.cpp  htmlentityparser.h  htmlparser.cpp  htmlparser.h  htmltokenizer.cpp  htmltokenizer.h  hyphenator.cpp  hyphenator.h  hyphendicts.h  localedata.cpp  localedata.h  plutobook.cc  plutobook.cpp  pointer.h  stringutils.cpp  stringutils.h  svgdocument.cpp  svgdocument.h  svgproperty.cpp  svgproperty.h  textbreakiterator.cpp  (+7 more)
source/graphics/: color.cpp  color.h  geometry.cpp  geometry.h  graphicscontext.cpp  graphicscontext.h  textshape.cpp  textshape.h
source/layout/: blockbox.cpp  blockbox.h  borderpainter.cpp  borderpainter.h  box.cpp  box.h  boxlayer.cpp  boxlayer.h  boxstyle.cpp  boxstyle.h  boxview.cpp  boxview.h  columnbuilder.cpp  columnbuilder.h  contentbox.cpp  contentbox.h  flexiblebox.cpp  flexiblebox.h  formcontrolbox.cpp  formcontrolbox.h  fragmentbuilder.cpp  fragmentbuilder.h  inlinebox.cpp  inlinebox.h  linebox.cpp  linebox.h  linelayout.cpp  linelayout.h  listitembox.cpp  listitembox.h  multicolumnbox.cpp  multicolumnbox.h  pagebox.cpp  pagebox.h  pagebuilder.cpp  pagebuilder.h  replacedbox.cpp  replacedbox.h  svgboxmodel.cpp  svgboxmodel.h  (+19 more)
source/resource/: fontresource.cpp  fontresource.h  imageresource.cpp  imageresource.h  resource.cpp  resource.h  textresource.cpp  textresource.h  url.cpp  url.h
subprojects/: cairo.wrap  fontconfig.wrap  harfbuzz.wrap  icu.wrap  libwebp.wrap
subprojects/packagefiles/: cairo-fix-font-options-leaks.patch
tools/: argparser.cpp  argparser.h  embed_dicts.py  html2pdf.cpp  html2png.cpp  meson.build
